--- a/play/play.css
+++ b/play/play.css
@@ -8,8 +8,9 @@ body,html{
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.65;
+  background-size: cover;
+  opacity: 0.65;
+   
 }
 #characterDiv{
     background-color:transparent;
@@ -117,7 +118,45 @@ body,html{
     bottom: 19.5%
 }
 
+#bullet
+{
+    display: none;
+    background-color: black;
+    width: 1.5%;
+    height: 2.5%;
+    border-radius:50% ;
+    position: absolute;
+    position: absolute;
+    right : 13%;
+    bottom: 22%;
+    transform-origin: -2500% 250%; 
+     /* display: none; */
+    /* animation-fill-mode: forwards; */
+    /* animation-direction: alternate; */
+    /* animation: bulletCurve 4s linear infinite; //Chrome, Firefox 16+, IE 10+, Safari 5  */
+  
+}  
+.bulletCurve
+{
+    
+    animation: bulletCurveAnime 5s ; 
+   
+   
+}
 
+@keyframes bulletCurveAnime {
+    from {
+      transform:rotate(0deg); 
+    }
+    to { 
+      transform:rotate(-180deg); 
+    }
+  }
+  
+/* @keyframes bulletCurve {
+    from {  transform: rotate(0deg) translateX(120px) rotate(180deg); }
+    to   {transform: rotate(180deg) translateX(120px) rotate(180deg); }
+} */
 
 #begImg
 {
@@ -129,17 +168,3 @@ body,html{
   border-image: none;
 
 }
-
-/* .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1s;
-  }
-
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
- 
-  } */
-
