--- a/Integrated version1/CSS/indexx.css
+++ b/Integrated version1/CSS/indexx.css
@@ -24,23 +24,14 @@
 }
 
 #usrBtn
-{
-    /* width: 49%; */
-    /* border: none; */
-    /* border-radius: 10%; */
-    /* background-color: rgb(96, 96, 201); */
-    /* margin-left: 25%;
-    margin-top: 15%; */
-    /* text-align: center; */
-    /* font-size: 20px; */
-    /* font-family: cursive; */
-    /* color: rgb(61, 18, 109); */
-    
-    width: 50%;
-    height: 15%;
+{ 
+    width: 45%;
+    height: 16%;
     position: absolute;
-    bottom: 15%;
-    left: 25%;
+    bottom: 4%;
+    left: 27%;
+    cursor: pointer;
+    font-size: 23px;
 }
 
 .usrBtn:hover
@@ -48,49 +39,38 @@
     background-color: springgreen;
 }
 
-.userName
+#userName
 {
     border-color: #000;
-    margin-left: 10%;
+    margin-left: 8%;
     margin-top: 6%;
     width: 80%;
-    height: 15%;
+    height: 20%;
+    border-radius: 20%;
+    position: absolute;
    
 
 }
-
-.creditsDiv
-{
-    position: relative;
-}
-
-.creditsBtn
+#usrValidate
 {
     position: absolute;
-    width: 7%;
-    border: none;
-    border-radius: 10%;
-    background-color: rgb(201, 117, 96);
-    margin-left: 4%;
-    margin-top: 35%;
+    color: red;
     text-align: center;
-    font-size: 20px;
-    /* font-family: cursive; */
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-
-   
-}
-
-.creditsBtn:hover
-{
-    background-color:blue;
+    margin-left: 26%;
+    margin-top: 20%;
 }
 
 .creditsDiv
 {
-    position: relative;
+    position: absolute;
+    width: 27%;
+    height: 52%;
+    margin-left: 72%;
 }
+
+
+
+
 
 .creditsModal{
     display: none;
@@ -104,21 +84,37 @@
     overflow: auto; 
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4); 
+ 
+   
   }
   
  
   .creditsDesc {
-    background-color: #4480da;
-    margin-left: 25%;
+    background-color: blue;
+    margin-left: 38%;
+    margin-top: 9.5%;
     padding: 20px;
-    width: 30%;
+    width: 25%;
+    height: 25%;
     text-align: center;
     color: rgb(209, 187, 187);
-    border-radius: 20%;
+    border-radius: 7%;
     font-size: 24px;
-    
   }
-  
+
+  .fade
+  {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1s;
+  }
+  @keyframes fade
+{
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
   #closeCredits {
     color: #aaaaaa;
     float: right;
@@ -137,4 +133,13 @@
   {
       display: none;
   }
+
+#creditsImg
+{
+    width: 54%;
+    height: 57%;
+    margin-left: 48%;
+    margin-top: 122%;
+    cursor: pointer;
+}
 
