--- a/Integrated version1/CSS/play.css
+++ b/Integrated version1/CSS/play.css
@@ -213,6 +213,12 @@ position: absolute;
    display: none;
 
 }
+#collisionFlamePlayer
+{
+
+display:none;
+position: absolute;
+}
 
 /* #begCount
 {
