--- a/version 2/CSS/ChooseUrChar.css
+++ b/version 2/CSS/ChooseUrChar.css
@@ -77,7 +77,6 @@
     font-family: cursive;
     height: 40%; 
     width: 140%;
-    /* background-color: black; */
     position: absolute;
     top: -43%;
     left: -30%;
@@ -88,7 +87,6 @@
     height: 50%;
     width: 45%;
     transition: width 2s, height 2s;
-    /* z-index: 2; */
     position: relative;
     margin-top: 12%;
 }
@@ -181,6 +179,7 @@ margin-left:81%;
       bottom: 35%;
       left: 30%;
       color:rgb(202, 0, 0);
+      cursor: pointer;
   }
 
   #charDoneBtn:hover
@@ -194,6 +193,7 @@ margin-left:81%;
     bottom: 10%;
     right: 42%;
     color:rgb(202, 0, 0);
+    cursor: pointer;
   }
 
   #battleBtn:hover
@@ -201,15 +201,9 @@ margin-left:81%;
       background-color:  rgb(169, 116, 219);
   }
 
-  /* ////////////////level style//////////// */
 #lvlcontainer
 {
-    /* height: 18%;
-    position: absolute;
-    top: 20%;
-    width: 20%;
-    right: 20%;
-    border-radius: 30%; */
+    
     width: 20%;
     position: absolute;
     top: 28%;
@@ -303,9 +297,73 @@ margin-left:81%;
     bottom: 35%;
     right: 27%;
     color:rgb(202, 0, 0);
+    cursor: pointer;
 }
 #lvlDoneBtn:hover
 {
     color:rgb(202, 0, 0);
     background-color:  rgb(169, 116, 219);
 }
+
+
+ /* /////////// */
+ #howToPlay
+ {   
+    width: 12%;
+    height: 37%;
+    margin-left: 74%;
+    position: absolute;
+    margin-top: 14%;
+ }
+ 
+ #htpImg
+ {
+    width: 64%;
+    height: 46%;
+    margin-left: 130%;
+    margin-top: 92%;
+    cursor: pointer;
+    position: absolute;
+}
+ 
+ 
+ .htpModal{
+     display: none;
+     position: fixed; 
+     z-index: 2; 
+     padding-top: 100px; 
+     left: 0;
+     top: 0;
+     width: 100%; 
+     height: 100%; 
+     overflow: auto; 
+     background-color: rgb(0,0,0);
+     background-color: rgba(0,0,0,0.4); 
+  
+    
+   }
+   
+  
+   .htpDesc {
+    background-color: teal;
+    margin-left: 38%;
+    margin-top: 9.5%;
+    padding: 20px;
+    width: 27%;
+    color: rgb(131, 16, 16);
+    border-radius: 7%;
+    font-size: 24px;
+   }
+ 
+   #closeHtp {
+     color: #aaaaaa;
+     float: right;
+     font-size: 28px;
+   }
+   
+   #closeHtp:hover,
+   #closeHtp:focus {
+     color: #000;
+     text-decoration: none;
+     cursor: pointer;
+   }
