--- a/version 2/CSS/indexx.css
+++ b/version 2/CSS/indexx.css
@@ -3,22 +3,19 @@
 {
     text-align: center;
     font-size: 18px;
-    /* font-family: cursive; */
+    
 
 
 }
 
 #welcomePage
  {
-  /*  border: 5%;
-    border-color: black; */
     position: absolute;
     margin-left: 39%;
     margin-top: 16%;
     width: 24%;
     height: 30%;
     background-color: rgb(255, 240, 253);
-    
     border-radius: 15%;
     border: 1px black solid;
 }
@@ -46,7 +43,6 @@
     margin-top: 6%;
     width: 80%;
     height: 20%;
-    border-radius: 20%;
     position: absolute;
    
 
@@ -90,14 +86,14 @@
   
  
   .creditsDesc {
-    background-color: blue;
+    background-color:teal;
     margin-left: 38%;
     margin-top: 9.5%;
     padding: 20px;
     width: 25%;
     height: 25%;
     text-align: center;
-    color: rgb(209, 187, 187);
+    color:rgb(121, 33, 33);
     border-radius: 7%;
     font-size: 24px;
   }
@@ -105,9 +101,9 @@
   .fade
   {
     -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
+    -webkit-animation-duration: 1s;
     animation-name: fade;
-    animation-duration: 1s;
+    animation-duration: 0.7s;
   }
   @keyframes fade
 {
@@ -119,7 +115,6 @@
     color: #aaaaaa;
     float: right;
     font-size: 28px;
-    /* font-weight: bold; */
   }
   
   #closeCredits:hover,
@@ -142,4 +137,65 @@
     margin-top: 122%;
     cursor: pointer;
 }
+
+#storyDiv
+{
+    width: 31%;
+    height: 52%;
+    margin-left: 0%;
+    position: absolute;
+}
+
+#storyImg
+{
+    width: 103%;
+    height: 75%;
+    margin-left: 8%;
+    margin-top: -3%;
+    cursor: pointer;   
+}
+
+.storyModal{
+    display: none;
+    position: fixed; 
+    z-index: 2; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+ 
+   
+  }
+  
+ 
+  .storyDesc {
+    background-color: teal;
+    margin-left: 38%;
+    margin-top: 9.5%;
+    padding: 20px;
+    width: 25%;
+    height: 25%;
+    text-align: center;
+    color: rgb(131, 16, 16);
+    border-radius: 7%;
+    font-size: 24px;
+  }
+
+  #closeStory {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+  }
+  
+  #closeStory:hover,
+  #closeStory:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 
