the final styling edition

--- a/version 2/CSS/badgesfunc.css
+++ b/version 2/CSS/badgesfunc.css
@@ -66,13 +66,13 @@
   
  
   .badgeDetails {
-    background-color: teal;
+    background-color: navy;
     margin-left: 34%;
     margin-top: 14%;
     padding: 20px;
     width: 30%;
     text-align: center;
-    color: darkred;
+    color: white;
     border-radius: 20%;
     font-size: 24px;
    
