--- a/version 2/CSS/ChooseUrChar.css
+++ b/version 2/CSS/ChooseUrChar.css
@@ -345,12 +345,12 @@ margin-left:81%;
    
   
    .htpDesc {
-    background-color: teal;
+    background-color: navy;
     margin-left: 38%;
     margin-top: 9.5%;
     padding: 20px;
     width: 27%;
-    color: rgb(131, 16, 16);
+    color:white;
     border-radius: 7%;
     font-size: 24px;
    }
