--- a/version 2/CSS/ChooseUrChar.css
+++ b/version 2/CSS/ChooseUrChar.css
@@ -345,18 +345,19 @@ margin-left:81%;
    
   
    .htpDesc {
-    background-color: navy;
+    background-image: url(../images/popupbg.jpg);
+    background-position: bottom;
     margin-left: 38%;
     margin-top: 9.5%;
     padding: 20px;
     width: 27%;
-    color:white;
+    color:rgb(0, 0, 0);
     border-radius: 7%;
     font-size: 24px;
    }
  
    #closeHtp {
-     color: #aaaaaa;
+     color: #000000;
      float: right;
      font-size: 28px;
    }
